--- a/MCQ_Differential_diagnosis.ipynb
+++ b/MCQ_Differential_diagnosis.ipynb
@@ -10,7 +10,7 @@
     "from langchain_chroma import Chroma\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter"
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n"
    ]
   },
   {
