updating the rag methodology and adding memory

--- a/MCQ_Differential_diagnosis.ipynb
+++ b/MCQ_Differential_diagnosis.ipynb
@@ -2,24 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.document_loaders import PyPDFLoader\n",
+    "from langchain_community.document_loaders import PyPDFDirectoryLoader\n",
     "from langchain_chroma import Chroma\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
-<<<<<<< HEAD
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n"
-=======
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter"
->>>>>>> 6768fad8bd4fb41c57102540fdfe5d7b6b7151f7
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -51,13 +47,14 @@
        "(448, 1487)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loader = PyPDFLoader(\"/home/omar71023/Downloads/Differential Diagnosis in Internal Medicine_0.pdf\")\n",
+    "\n",
+    "loader = PyPDFDirectoryLoader(\"books\")\n",
     "pages = loader.load()\n",
     "\n",
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
@@ -68,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,87 +76,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "vectorstore = Chroma.from_documents(documents=splits, embedding=embeddings)\n",
-    "retriever = retriever = vectorstore.as_retriever(search_kwargs={\"k\": 5})"
+    "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 5})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Document(metadata={'page': 5, 'source': '/home/omar71023/Downloads/Differential Diagnosis in Internal Medicine_0.pdf'}, page_content='Since the differential diagnosis is the first clinical exercise after obtain-\\ning the clinical history and the results of the basic and complementary examinations, this book has a sharp focus on essential information with a goal of providing clear answers to clinical questions in internal medicine. As many diseases have similarities in clinical presentation differential diag-nosis becomes crucial for making the right clinical diagnosis. For example, physical signs of pulmonary consolidation are present in several conditions involving not only lungs but also cardiovascular system, i.e. pneumonia, primary and metastatic lung cancer, congestive heart failure etc. The impor-tance of differential diagnosis is emphasized by the fact that the right diag-nosis is the key for the efficient treatment.\\nThe authors strongly believe that this manual would be useful not only \\nfor medical students but also for medical residents of different specialities and practitioners.'),\n",
-       " Document(metadata={'page': 7, 'source': '/home/omar71023/Downloads/Differential Diagnosis in Internal Medicine_0.pdf'}, page_content='DIFFERENTIAL DIAGNOSIS IN INTERNAL MEDICINE7\\nDifferential diagnosis of diarrhea ................................................................... 220\\nSvetlana Nichita\\nDifferential diagnosis of malabsorbtion ......................................................... 236\\nSvetlana Nichita\\nDifferential diagnosis of dysphagia ................................................................ 261\\nTatiana DumitrașDifferential diagnosis of hepatomegaly .......................................................... 276\\nTatiana Dumitraș\\nDifferential diagnosis of jaundice ................................................................... 290\\nTatiana Dumitraș\\nDifferential diagnosis of portal hypertension  and  its complications ........... 303\\nOlga Corlăteanu, Lilia Vlasov\\nDifferential diagnosis of arthritis ................................................................... 318\\nNelea Draguța\\nDifferential diagnosis of back pain ................................................................. 338'),\n",
-       " Document(metadata={'page': 7, 'source': '/home/omar71023/Downloads/Differential Diagnosis in Internal Medicine_0.pdf'}, page_content='Nelea Draguța\\nDifferential diagnosis of back pain ................................................................. 338\\nNelea DraguțaDifferential diagnosis of connective tissue diseases ....................................... 358\\nNelea Draguța\\nDifferential diagnosis of fever of unknown origin ......................................... 374\\nNelea Draguța\\nDifferential diagnosis of fibromyalgia syndrome ........................................... 390\\nNelea Draguța\\nDifferential diagnosis of multivisceral syndrome in connective  \\ntissue diseases  ................................................................................................. 399\\nNelea Draguța\\nDifferential diagnosis of acute kidney failure ................................................. 410\\nLilia Vlasov\\nDifferential diagnosis of edema ...................................................................... 424\\nLilia Vlasov\\nDifferential diagnosis of nephrotic syndrome ................................................ 435'),\n",
-       " Document(metadata={'page': 447, 'source': '/home/omar71023/Downloads/Differential Diagnosis in Internal Medicine_0.pdf'}, page_content='DIFFERENTIAL DIAGNOSIS IN INTERNAL MEDICINE447\\n7. Davidson’s Principles and practice of medicine (21strevised ed.) / by Colledge \\nN.R., Walker B.R., and Ralston S.H., eds. – Churchill Livingstone, 2010. – \\n1376 p.\\n8. Harrison’s principles of internal medicine (18thedition) / by Longo D.L., \\nKasper D.L., Jameson J.L. et al. (eds.). – McGraw-Hill Professional, 2012. – 4012 p.\\n9. img.medscape.com/pi/iphone/medscapeapp/html/A244631-business.html  \\n(accesed 10.05.18)\\n10. emedicine.medscape.com/article/244631-ov (accested 20.05.18).')]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "retriever.invoke()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain import PromptTemplate\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.retrievers.multi_query import MultiQueryRetriever\n",
     "\n",
-    "prompt = \"\"\"\n",
-    "You are a helpful medicine teacher. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that I cannot answer. Use three sentences maximum and keep the answer concise.\n",
-    "\n",
-    "Question: {question} \n",
-    "\n",
-    "Context: {context} \n",
-    "\n",
-    "Answer:\n",
-    "\"\"\"\n",
-    "\n",
-    "prompt = PromptTemplate(template=prompt, input_variables=['context','question'])\n",
-    "\n",
-    "def format_docs(docs):\n",
-    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
-    "\n",
-    "\n",
-    "rag_chain = (\n",
-    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
-    "    | prompt\n",
-    "    | model\n",
-    "    | StrOutputParser()\n",
+    "question = \"What are differential diagnosis steps in arm?\"\n",
+    "llm = model\n",
+    "retriever_from_llm = MultiQueryRetriever.from_llm(\n",
+    "    retriever=retriever, llm=llm\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Which of the following is NOT a differential diagnosis for chest pain in a patient with a history of left lower chest pain? \\n\\na) Intercostal neuralgia\\nb) Pulmonary embolism\\nc) Myositis\\nd) Pneumonia/Pleurisy\\ne) Splenic flexure syndrome \\n\\nThe correct answer is (e) Splenic flexure syndrome.  Splenic flexure syndrome is a rare condition and is not typically associated with left lower chest pain. \\n'"
+       "10"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rag_chain.invoke(\"give me an mcq question about differential diagnosis in chest\") "
+    "unique_docs = retriever_from_llm.invoke(question)\n",
+    "len(unique_docs)"
    ]
   },
   {
@@ -168,6 +135,175 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain import PromptTemplate\n",
+    "from langchain_core.runnables import RunnableLambda\n",
+    "\n",
+    "prompt = \"\"\"\n",
+    "You are a helpful medical differential diagnosis expert. Use the following pieces of retrieved context and the chat history given to you to answer the question. If you don't know the answer, just say that I cannot answer. Be concise and avoid lengthy responses.\n",
+    "you also has access to the chat history {history} \n",
+    "\n",
+    "The following is mainly help you answer the user query (Note: you may also need the chat history and may not depending on the user query).\n",
+    "here is the related context: {context} \n",
+    "\n",
+    "and here is the user Question: {question}\n",
+    " \n",
+    "Answer:\n",
+    "\"\"\"\n",
+    "\n",
+    "with open(\"summary.txt\", 'w') as f:\n",
+    "    f.write(\"\")\n",
+    "\n",
+    "prompt = PromptTemplate(template=prompt, input_variables=['context','question','history'])\n",
+    "\n",
+    "def format_docs(docs):\n",
+    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
+    "with open(\"summary.txt\", 'r') as f:\n",
+    "    history = f.read()\n",
+    "\n",
+    "rag_chain = (\n",
+    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough(), \"history\":  RunnableLambda(lambda x: history)}\n",
+    "    | prompt\n",
+    "    | model\n",
+    "    | StrOutputParser()\n",
+    ")\n",
+    "\n",
+    "\n",
+    "summarization_temp = \"\"\"\n",
+    "You are a helpful medical differential diagnosis expert. Your will be called many times. \n",
+    "you task is to summarize the conversation text given to you and keep the important information.\n",
+    "If the text is as whole important and not long text, not summarize it.\n",
+    "Also if you are given the person_name or any background about it, keep it in your summary.\n",
+    "Try to keep your summary coincise.\n",
+    "conversation given to you: {text}\n",
+    "\"\"\"\n",
+    "summarization_prompt = PromptTemplate(template=summarization_temp, input_variables=['text'])\n",
+    "\n",
+    "summarization_chain = summarization_prompt | model | StrOutputParser()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    query = input(\"Input your query: \")\n",
+    "    if \"exit\" in query.lower():\n",
+    "        break\n",
+    "    response = rag_chain.invoke(query)\n",
+    "    with open(\"summary.txt\", 'a') as f:\n",
+    "        f.write(\"user query: \" + query + \"\\n\" + \"llm response: \"+ response)\n",
+    "    print(response)\n",
+    "\n",
+    "    with open(\"summary.txt\", 'r') as f:\n",
+    "        history = f.read()\n",
+    "\n",
+    "    history = summarization_chain.invoke(history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"what is chest pain?\\nChest pain is a symptom that can be caused by a wide range of conditions, from mild to life-threatening.  It can originate from various organs within the chest, making it crucial to seek medical attention for proper diagnosis and treatment. \\nI am omar and I want to ask about symptoms of arm diseases?\\nI cannot answer your question about arm diseases. The provided text focuses on specific conditions like systemic sclerosis, polymyositis/dermatomyositis, nodal osteoarthritis, and writer's cramp, which affect different parts of the body, including the arms, but they don't provide a comprehensive list of arm disease symptoms. \\nok what do you know about differential diagnosis in arm?\\nI cannot answer your question.  The provided text focuses on chest pain and its differential diagnosis, not arm pain.  To get information about differential diagnosis in arm pain, you should consult a medical professional. \\nwhat is my name?\\nI cannot answer your question. The provided text is about differential diagnosis in internal medicine, and it doesn't contain any information about your name. \\n\""
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "with open(\"summary.txt\", 'r') as f:\n",
+    "    history = f.read()\n",
+    "history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Generate an mcq question about differential diagnosis in chest.\\nA 50-year-old male presents with chest pain. Which of the following is NOT a likely cause of chest pain in this patient? \\n* a) Myocardial infarction\\n* b) Pulmonary embolism\\n* c) Pleurisy\\n* d)  Appendicitis \\n\\nAppendicitis is a condition affecting the abdomen, not the chest. \\n'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The question is about differential diagnosis of chest pain in a 50-year-old male. The answer choices are various conditions that can cause chest pain. The correct answer is **Appendicitis** because it is an abdominal condition, not a chest condition. \\n'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Your previous question was about the differential diagnosis of chest pain in a 50-year-old male. The question provided a list of potential causes for chest pain, and you were asked to select the correct answer. \\n'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"what was my previous question about.\"\n",
+    "response = rag_chain.invoke(query)\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##############################\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
